@@ -2026,7 +2026,8 @@ class MetaDirRepository(Repository):
             except errors.NoSuchFile:
                 pass
         else:
-            self.control_files.put_utf8('no-working-trees', '')
+            self._transport.put_bytes('no-working-trees', '',
+                mode=self.control_files._file_mode)
     
     def make_working_trees(self):
         """Returns the policy for making working trees on new branches."""
